--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                     <span class="quantity">0</span>
                 </i>
                 <button class="hamburger"><i class="fa-solid fa-bars"></i></button>
+                <button class="btnLogin">Daxil ol</button>
+                <h7></h7>
             </div>
         </div>
         <div class="nav-mobile-bar">
